--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Practica Sesión 5</title>
-	<link rel="stylesheet" href="css/estilo2.css">
+	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
 	<div id="encabezado">
-		<img id="img1" src="img/fondo-5.jpg" alt="">
+		<!--img src="img/fondo-4.jpg" alt=""-->
 	</div>
 	<div>
 		<h1>PATRICIA JARAMILLO</h1>
@@ -15,14 +15,10 @@
 	<div id="cuerpo" class="row">
 		<div id="lado-izq" class="prop-col">
 			<div>
-				<img src="img/Patriciaj.jpg" alt="" class="img-circulo">
+				<img src="img/Patriciaj.jpg" alt="">
 			</div>
-			<div clase="subtitulo"><h2 id="t1">CONTACTO</h2></div>
-			<div class="texto-centrado">
-				<p>Ingeniera de Sistemas</p>
-				<p>Docente de Comfama</p>
-				<p><a href="https://desarrollowebconhtml5.blogspot.com/">Página de Desarrollo Web con HTML5</a></p>
-			</div>
+			<div clase="subtitulo"><h2>CONTACTOS</h2></div>
+			<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sit ipsa a quidem eveniet ipsum odio ex ratione voluptatem expedita eligendi maiores perspiciatis, sint natus officiis doloremque modi ducimus, omnis.</div>
 
 		</div>
 		<div id="lado-der" class="prop-col">
@@ -30,15 +26,6 @@
 			<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sit ipsa a quidem eveniet ipsum odio ex ratione voluptatem expedita eligendi maiores perspiciatis, sint natus officiis doloremque modi ducimus, omnis.</div>
 			<br>
 			<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus dicta tempora, doloremque omnis porro, suscipit delectus, dolorum vel odit adipisci, consequuntur praesentium error facere soluta reiciendis alias laudantium eveniet minus!</div>
-			<br>
-			<hr>
-			<div clase="subtitulo"><h2 id="t2">REDES SOCIALES</h2></div>
-			<div id="redessoc" class="row">
-				<a href="#"><div class="tam-col"><img src="img/Facebook.png" alt="Facebook" class="img-soc"></div></a>
-				<a href="#"><div class="tam-col"><img src="img/Instagram.png" alt="Instagram" class="img-soc"></div></a>
-				<a href="#"><div class="tam-col"><img src="img/Twitter.png" alt="Twitter" class="img-soc"></div></a>
-				<a href="#"><div class="tam-col"><img src="img/WhatsApp.png" alt="WhatsApp" class="img-soc"></div></a>
-			</div>
 		</div>
 	</div>
 </body>
