--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Practica Sesión 5</title>
-	<link rel="stylesheet" href="css/estilo2.css">
+	<link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
 	<div id="encabezado">
-		<img id="img1" src="img/fondo-5.jpg" alt="">
+		<!--img id="img1" src="img/fondo-5.jpg" alt=""-->
 	</div>
 	<div>
 		<h1>PATRICIA JARAMILLO</h1>
