--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
 
 		</div>
 		<div id="lado-der" class="prop-col">
-			<div clase="subtitulo"><h2 id="t2">INFORMACIÓN</h2></div>
+			<div clase="subtitulo"><h2 class="t2">INFORMACIÓN</h2></div>
 			<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sit ipsa a quidem eveniet ipsum odio ex ratione voluptatem expedita eligendi maiores perspiciatis, sint natus officiis doloremque modi ducimus, omnis.</div>
 			<br>
 			<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus dicta tempora, doloremque omnis porro, suscipit delectus, dolorum vel odit adipisci, consequuntur praesentium error facere soluta reiciendis alias laudantium eveniet minus!</div>
+			<div class="prop-col">
+				<div clase="subtitulo"><h2 class="t2">REDES SOCIALES</h2></div>
+				<div id="redessoc">
+					<a href="https://www.facebook.com/" target="_blank"><img src="img/Facebook.png" alt="Facebook" class="img-soc"></a>
+					<a href="https://www.instagram.com" target="_blank"><img src="img/Instagram.png" alt="Instagram" class="img-soc"></a>
+					<a href="https://www.twitter.com" target="_blank"><img src="img/Twitter.png" alt="Twitter" class="img-soc"></a>
+					<a href="https://www.whatsapp.com" target="_blank"><img src="img/WhatsApp.png" alt="WhatsApp" class="img-soc"></a>
+					<a href=""></a>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
