--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 			<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam sit ipsa a quidem eveniet ipsum odio ex ratione voluptatem expedita eligendi maiores perspiciatis, sint natus officiis doloremque modi ducimus, omnis.</div>
 			<br>
 			<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus dicta tempora, doloremque omnis porro, suscipit delectus, dolorum vel odit adipisci, consequuntur praesentium error facere soluta reiciendis alias laudantium eveniet minus!</div>
-			<div class="prop-col">
+			<div>
+				<hr>
 				<div clase="subtitulo"><h2 class="t2">REDES SOCIALES</h2></div>
 				<div id="redessoc">
 					<a href="https://www.facebook.com/" target="_blank"><img src="img/Facebook.png" alt="Facebook" class="img-soc"></a>
